force-app/main/default/objects/E_MOC_Attachment_Doc_require__c.object
<CustomObject>
    <fields>
        <fullName>Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>E_MOC_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E-MOC Application</label>
        <referenceTo>E_MOC_Application__c</referenceTo>
        <relationshipLabel>E-MOC Attachment Doc require</relationshipLabel>
        <relationshipName>E_MOC_Attachment_Doc_require</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E_MOC_Attachment__c</fullName>
        <label>E-MOC Attachment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>E_MOC_Doc_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Plot Plan</fullName>
                </value>
                <value>
                    <fullName>General Equipment Arrangements &amp; Elevations</fullName>
                </value>
                <value>
                    <fullName>Isometric drawing/GA drawing</fullName>
                </value>
                <value>
                    <fullName>Process Flow Diagram (PFD)</fullName>
                </value>
                <value>
                    <fullName>Process Engineering Flow Schemes (P&amp;ID)</fullName>
                </value>
                <value>
                    <fullName>PSFSs (Process Safeguarding Flow Schemes)</fullName>
                </value>
                <value>
                    <fullName>Cause and Effect diagram</fullName>
                </value>
                <value>
                    <fullName>Hazadous Area Classification Schedule/Drawing</fullName>
                </value>
                <value>
                    <fullName>Equipment datasheet</fullName>
                </value>
                <value>
                    <fullName>Instrument datasheet</fullName>
                </value>
                <value>
                    <fullName>Equipment/Instrument drawing</fullName>
                </value>
                <value>
                    <fullName>Line list</fullName>
                </value>
                <value>
                    <fullName>Fire &amp; Gas Detector Layout</fullName>
                </value>
                <value>
                    <fullName>Safety Critical Equipment list</fullName>
                </value>
                <value>
                    <fullName>Safety Data Sheet</fullName>
                </value>
                <value>
                    <fullName>Hazards &amp; Effects Register</fullName>
                </value>
                <value>
                    <fullName>HEMP Bowties</fullName>
                </value>
                <value>
                    <fullName>Pre-Incident Plan</fullName>
                </value>
                <value>
                    <fullName>Simplified Process Flow Diagram</fullName>
                </value>
                <value>
                    <fullName>Operating Manuals / Procedures</fullName>
                </value>
                <value>
                    <fullName>Work Instructions / Standing Instructions</fullName>
                </value>
                <value>
                    <fullName>Training Manuals</fullName>
                </value>
                <value>
                    <fullName>Process Design Information (Process Chemistry, Process Description)</fullName>
                </value>
                <value>
                    <fullName>Heat &amp; Material Balance</fullName>
                </value>
                <value>
                    <fullName>RV load summary</fullName>
                </value>
                <value>
                    <fullName>Process Safeguarding Memorandum</fullName>
                </value>
                <value>
                    <fullName>Instrument Safeguarding Narrative</fullName>
                </value>
                <value>
                    <fullName>Reactive Hazards Analysis (RHA)</fullName>
                </value>
                <value>
                    <fullName>PI Process Book (needs to be updated if DCS display/schematic is updated)</fullName>
                </value>
                <value>
                    <fullName>Feed or Product Specifications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E_MOC_Checklist_type__c</fullName>
        <label>E-MOC Checklist type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>E_MOC_Doc_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Plot Plan</fullName>
                </value>
                <value>
                    <fullName>General Equipment Arrangements &amp; Elevations (GA drawing)</fullName>
                </value>
                <value>
                    <fullName>Isometric drawing/GA drawing</fullName>
                </value>
                <value>
                    <fullName>Process Flow Diagram (PFD)</fullName>
                </value>
                <value>
                    <fullName>Process Engineering Flow Schemes (P&amp;ID)</fullName>
                </value>
                <value>
                    <fullName>PSFSs (Process Safeguarding Flow Schemes)</fullName>
                </value>
                <value>
                    <fullName>Cause and Effect diagram</fullName>
                </value>
                <value>
                    <fullName>Hazadous Area Classification Schedule/Drawing</fullName>
                </value>
                <value>
                    <fullName>Equipment datasheet</fullName>
                </value>
                <value>
                    <fullName>Instrument datasheet</fullName>
                </value>
                <value>
                    <fullName>Equipment/Instrument drawing</fullName>
                </value>
                <value>
                    <fullName>Equipment list</fullName>
                </value>
                <value>
                    <fullName>RATS (range alarm and trip setting)</fullName>
                </value>
                <value>
                    <fullName>Line list</fullName>
                </value>
                <value>
                    <fullName>Fire &amp; Gas Detector Layout</fullName>
                </value>
                <value>
                    <fullName>Safety Critical Equipment list</fullName>
                </value>
                <value>
                    <fullName>Safety Data Sheet</fullName>
                </value>
                <value>
                    <fullName>Hazards &amp; Effects Register</fullName>
                </value>
                <value>
                    <fullName>HEMP Bowties</fullName>
                </value>
                <value>
                    <fullName>Pre-Incident Plan</fullName>
                </value>
                <value>
                    <fullName>Bill of Material</fullName>
                </value>
                <value>
                    <fullName>Spare part interchangable record (SPIR) and spare part list</fullName>
                </value>
                <value>
                    <fullName>Stock inventory</fullName>
                </value>
                <value>
                    <fullName>Simplified Process Flow Diagram</fullName>
                </value>
                <value>
                    <fullName>Operating Manuals / Procedures</fullName>
                </value>
                <value>
                    <fullName>Work Instructions / Standing Instructions</fullName>
                </value>
                <value>
                    <fullName>Training Manuals</fullName>
                </value>
                <value>
                    <fullName>Product Storage Tank Technical data</fullName>
                </value>
                <value>
                    <fullName>Process Design Information (Process Chemistry, Process Description)</fullName>
                </value>
                <value>
                    <fullName>Feed or Product Specifications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E_MOC_Doc_Type__c</fullName>
        <label>E-MOC Doc Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Common document</fullName>
                </value>
                <value>
                    <fullName>Operations document</fullName>
                </value>
                <value>
                    <fullName>Technologist document</fullName>
                </value>
                <value>
                    <fullName>Process Control Document</fullName>
                </value>
                <value>
                    <fullName>Instrument Engineering Document</fullName>
                    <label>Instrument Document</label>
                </value>
                <value>
                    <fullName>Stationary Equipment and Piping Document</fullName>
                </value>
                <value>
                    <fullName>Rotating Document</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Document Common</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Document Driver/Actuator (process) at Valve (e.g. Motor, MOV)</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Document Electrical equipment/system</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Document Emergency Backup Systems (UPS for Fire &amp; Gas and UPS for DCS, Motor of Firewater pump, Emergency Generator, Emergency lighting, remote fire fighting control equipment))</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Document Communication (e.g. talk-back, CCTV, radio, public announce and telecommunication network)</fullName>
                </value>
                <value>
                    <fullName>Maintenance document</fullName>
                </value>
                <value>
                    <fullName>Civil and Structure document</fullName>
                </value>
                <value>
                    <fullName>Combustion document</fullName>
                </value>
                <value>
                    <fullName>HSE document</fullName>
                </value>
                <value>
                    <fullName>Process Safety and Fire Safety document</fullName>
                </value>
                <value>
                    <fullName>Environment document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_No__c</fullName>
        <label>Question No</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>E-MOC Attachment Doc require</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>E_MOC_Doc_Type__c</columns>
        <columns>E_MOC_Checklist_type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Doc Require-{0000000}</displayFormat>
        <label>Attachment No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>